EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/setin.3..exp
m2f: error: 
m2f:   setin.mzn:3 
m2f:   In constraint. 
m2f:   Model inconsistency detected.
