EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/setin.4.4.dzn
x1 = 4;
x2 = {4};
